syntax = "proto3";

option go_package = "dockersinventory/pb";

message DockerImage {
    string repoTag = 1;
} 

message GetDockerImagesListRequest {}
// message GetDockerImagesListResponse { repeated DockerImage dockerImages = 1; }
message GetDockerImagesListResponse { repeated DockerImage dockerImages = 1; }


message PostDockerImageRequest {
    string image = 1;
    string cmd = 2;
}
message PostDockerImageResponse {}

service Inventory {
    rpc GetDockerImagesList(GetDockerImagesListRequest) returns (GetDockerImagesListResponse) {}
    rpc PostDockerImage(PostDockerImageRequest) returns(PostDockerImageResponse) {}
}